paula changed games page

--- a/coding/games.html
+++ b/coding/games.html
@@ -12,6 +12,10 @@
         <button>back</button>
     </nav>
 
+   CHANGING STUFF  AGAIN 
+   IT WILL WORK 
+   
+   
     <main>
         <div id="content">
             <h3>games</h3>
