I put together all the CSS files

--- a/coding/games.html
+++ b/coding/games.html
@@ -4,27 +4,28 @@
     <meta charset="UTF-8">
     <title>Games</title>
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
-    <link rel="stylesheet" type="text/css" href="gamesstyle.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <nav>
-        <button>back</button>
-    </nav>
-
-  
-   
-   
     <main>
         <div id="content">
-            <h3>games</h3>
+            <nav>
+                <button class="back">back</button>
+                <div>
+                    <h3 class="heading">games</h3>
+                </div>
+            </nav>
+            <div class="heading2">
             <p id="first">Are you ready?</p>
             <p id="second">Let's hop into the</p>
-            <h1>Mediterranean forest</h1>
-            <div class="game"><img src="placeholder.jpg"></div>
-            <div class="game"><img src="placeholder.jpg"></div>
-            <div class="game"><img src="placeholder.jpg"></div>
-            <div class="game"><img src="placeholder.jpg"></div>
+            <h1 class="title">Mediterranean forest</h1>
+            
+            <div class="section"><img src="placeholder.jpg"></div>
+            <div class="section"><img src="placeholder.jpg"></div>
+            <div class="section"><img src="placeholder.jpg"></div>
+            <div class="section"><img src="placeholder.jpg"></div>
+            </div>
         </div>
 
     </main>
