--- a/coding/index.html
+++ b/coding/index.html
@@ -11,7 +11,7 @@
    <img src="placeholder.jpg" id="logo" alt="logo">
    <p>What's your name?</p>
     <input type="text">
-    <button>continue</button>
+    <button class="start">continue</button>
     </main>
 </body>
 </html>
