--- a/coding/instructions.html
+++ b/coding/instructions.html
@@ -5,16 +5,16 @@
     <meta charset="UTF-8">
     <title>Mission</title>
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
-    <link rel="stylesheet" type="text/css" href="instructionsstyle.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
     <main>
         <div id="content">
             <nav>
-                <button>back</button>
+                <button class="back">back</button>
                 <div>
-                    <h3>mediterranean forest</h3>
+                    <h3 class="heading">mediterranean forest</h3>
                 </div>
             </nav>
             <p id="first">Instructions:</p>
@@ -24,7 +24,7 @@
                 <img src="round-placeholder.png">
                 <h1>Find the stickers</h1>
             </section>
-            <section class="description">
+            <section class="description2">
                 <img src="round-placeholder.png">
                 <img src="round-placeholder.png">
                 <img src="round-placeholder.png">
@@ -35,7 +35,7 @@
                 <img src="round-placeholder.png">
                 <h1>Pick the one that matches with the correct location.</h1>
             </section>
-            <section class="description">
+            <section class="description2">
                 <img src="placeholder.jpg">
                 <p>It is important that they are in the correct order.</p>
             </section>
@@ -43,13 +43,13 @@
                 <img src="round-placeholder.png">
                 <h1>Check the points you won.</h1>
             </section>
-            <section class="description">
+            <section class="description2">
                 <img src="placeholder.jpg">
             </section>
 
 
         </div>
-        <button id="start">Start</button>
+        <button class="start">Instructions</button>
     </main>
 </body>
 
