--- a/coding/mission.html
+++ b/coding/mission.html
@@ -5,24 +5,29 @@
     <meta charset="UTF-8">
     <title>Mission</title>
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
-    <link rel="stylesheet" type="text/css" href="missionstyle.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-    <nav>
-        <button>back</button>
-    </nav>
+
     <main>
         <div id="content">
-            <h3>mediterranean forest</h3>
-            <p id="first">Mission:</p>
+            <nav>
+                <button class="back">back</button>
+                <div>
+                    <h3 class="heading">mediterranean forest</h3>
+                </div>
+            </nav>
+            <p class="mission">Mission:</p>
             <hr><br>
-            <p id="second">Clear the</p>
-            <h1>Plastic traps</h1>
-            <div class="game"><img src="rectangle-placeholder.png"></div>
-            <div id="description">This beautiful mediterranean forest is polluted with plastic materials. Some animals are in danger. Help us clean their home!</div>
-            
-            <button>Instructions</button>
+            <div class="mission3">
+                <h4 class="mission2">Clear the</h4>
+                <h1 class="title">Plastic traps</h1>
+                <div class="game"><img src="rectangle-placeholder.png"></div>
+                <div class="description">This beautiful mediterranean forest is polluted with plastic materials. Some animals are in danger. Help us clean their home!</div>
+
+                <button class="start">Instructions</button>
+            </div>
         </div>
     </main>
 </body>
