--- a/coding/welcomepage.html
+++ b/coding/welcomepage.html
@@ -5,18 +5,19 @@
     <meta charset="UTF-8">
     <title>Welcome page</title>
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
-    <link rel="stylesheet" type="text/css" href="welcomepagestyle.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
 </head>
 
 <body>
-       <nav><img src="placeholder.jpg"  id="menu" alt="menu"></nav>
        <main>
-        <h1>Hej!</h1>
-        <h3>Welcome to the Greenhouses Game</h3>
-        <div><p><img src="placeholder.jpg" id="map" alt="map" align="left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+        <h1>Hello, Lukas!</h1>
+        <h3 id="welcometitle">Welcome to the Greenhouses Game</h3>
+        <div><p><img src="placeholder.jpg" id="welcomemap" alt="map" align="left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
         <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p></div>
 
+   <button class="start">Let's go</button>
     </main>
+
 
 
 </body>
