Made some changes in the structure (it looks better now)

--- a/coding/firstquestion.html
+++ b/coding/firstquestion.html
@@ -6,23 +6,24 @@
     <title>Mission</title>
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <main>
         <div id="content">
             <nav>
-                <button class="back">back</button>
-                <div>
-                    <h3 class="heading">mediterranean forest</h3>
+                <button class="back"><i class="fa fa-arrow-left"></i></button>
+                <div class="heading">
+                    <h3>mediterranean forest</h3>
                 </div>
             </nav>
 
-            <p id="help"><img src="placeholder.jpg" id="map" align="right">Need help?<br>Check the map</p>
+            <p id="help"><img src="placeholder.jpg" id="map" align="right"><em>Need help?</em><br>Check the map</p>
             <div id="question">
                 <div id="number">1</div>
                 <div>
-                    <p>Find the plastic item before this bird chokes on it.</p>
+                    <p>Find the plastic item so the rosemary herb can still be used. </p>
                 </div>
             </div>
             <img src="round-placeholder.png" id="bird">
