--- a/coding/games.html
+++ b/coding/games.html
@@ -5,21 +5,22 @@
     <title>Games</title>
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <main>
         <div id="content">
             <nav>
-                <button class="back">back</button>
-                <div>
-                    <h3 class="heading">games</h3>
+                <button class="back"><i class="fa fa-arrow-left"></i></button>
+                <div class="heading">
+                    <h3>games</h3>
                 </div>
             </nav>
             <div class="heading2">
             <p id="first">Are you ready?  </p>
             <p id="second">Let's hop into the</p>
-            <h1 class="title">Mediterranean forest</h1>
+            <h1 class="title">Mediterranean<br>forest</h1>
             
             <div class="section"><img src="placeholder.jpg"></div>
             <div class="section"><img src="placeholder.jpg"></div>
