--- a/coding/instructions.html
+++ b/coding/instructions.html
@@ -6,50 +6,49 @@
     <title>Mission</title>
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
     <main>
         <div id="content">
             <nav>
-                <button class="back">back</button>
-                <div>
-                    <h3 class="heading">mediterranean forest</h3>
+                <button class="back"><i class="fa fa-arrow-left"></i></button>
+                <div class="heading">
+                    <h3>mediterranean forest</h3>
                 </div>
             </nav>
-            <p id="first">Instructions:</p>
+            <p class="mission">Instructions:</p>
             <hr><br>
-            
+
             <section class="headline">
                 <img src="round-placeholder.png">
                 <h1>Find the stickers</h1>
             </section>
-            <section class="description2">
+            <section class="descriptiontwo">
                 <img src="round-placeholder.png">
                 <img src="round-placeholder.png">
                 <img src="round-placeholder.png">
                 <img src="round-placeholder.png">
                 <p>They are all over the place. Check the map and don’t forget to look on the floor or the top of the trees !</p>
             </section>
-             <section class="headline">
+            <section class="headline">
                 <img src="round-placeholder.png">
                 <h1>Pick the one that matches with the correct location.</h1>
             </section>
-            <section class="description2">
-                <img src="placeholder.jpg">
+            <section class="descriptiontwo">
                 <p>It is important that they are in the correct order.</p>
             </section>
             <section class="headline">
                 <img src="round-placeholder.png">
                 <h1>Check the points you won.</h1>
             </section>
-            <section class="description2">
-                <img src="placeholder.jpg">
+            <section class="descriptiontwo">
             </section>
 
 
         </div>
-        <button class="start">Instructions</button>
+        <button class="start">Start</button>
     </main>
 </body>
 
