--- a/coding/mission.html
+++ b/coding/mission.html
@@ -6,6 +6,7 @@
     <title>Mission</title>
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
     <link rel="stylesheet" type="text/css" href="style.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
@@ -13,9 +14,9 @@
     <main>
         <div id="content">
             <nav>
-                <button class="back">back</button>
-                <div>
-                    <h3 class="heading">mediterranean forest</h3>
+                <button class="back"><i class="fa fa-arrow-left"></i></button>
+                <div class="heading">
+                    <h3>mediterranean forest</h3>
                 </div>
             </nav>
             <p class="mission">Mission:</p>
