--- a/coding/welcomepage.html
+++ b/coding/welcomepage.html
@@ -9,13 +9,22 @@
 </head>
 
 <body>
-       <main>
-        <h1>Hello, Lukas!</h1>
-        <h3 id="welcometitle">Welcome to the Greenhouses Game</h3>
-        <div><p><img src="placeholder.jpg" id="welcomemap" alt="map" align="left">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
-        <p>Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum</p></div>
+    <main>
+        <h1 id="hello">Hello, Lukas!</h1>
+        <h3 id="welcometitle">Welcome to the <em>Greenhouses Game</em></h3>
+        <div>
+            <p class="welcomecontent"><img src="placeholder.jpg" id="welcomemap" alt="map" align="right">Welcome to Aarhus' Greenhouses, we are thrilled to have you here!
+                Right now you're about to start an adventure troughout 4 different spectacular areas!</p>
+            <p class="welcomecontent">You will discover exotic plants and tiny creatures in their natural habitat.
+                <br>
+                Let's not forget: nowadays, these areas are facing global problems, such as pollution or climate change.<br>
 
-   <button class="start">Let's go</button>
+                First, we need to find out their causes and learn how to prevent them in the future.
+                Explore as much as you can and don't forget to have fun!
+            </p>
+        </div>
+
+        <button class="start">Let's go</button>
     </main>
 
 
