--- a/coding/index.html
+++ b/coding/index.html
@@ -9,7 +9,7 @@
 <body>
    <main>
    <img src="placeholder.jpg" id="logo" alt="logo">
-   <p>What's your name?</p>
+   <p>What is your name/name of your group?</p>
     <input type="text">
     <button class="start">continue</button>
     </main>
