--- a/coding/thirdquestion.html
+++ b/coding/thirdquestion.html
@@ -5,21 +5,25 @@
     <meta charset="UTF-8">
     <title>Mission</title>
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
-    <link rel="stylesheet" type="text/css" href="questionsstyle.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
+     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 
 <body>
-    <nav>
-        <button>back</button>
-    </nav>
+
     <main>
         <div id="content">
-            <h3>mediterranean forest</h3>
+             <nav>
+                <button class="back"><i class="fa fa-arrow-left"></i></button>
+                <div class="heading">
+                    <h3>mediterranean forest</h3>
+                </div>
+            </nav>
             <p id="help"><img src="placeholder.jpg" id="map" align="right">Need help?<br>Check the map</p>
             <div id="question">
                 <div id="number">3</div>
                 <div>
-                    <p>Take the trash out so the snail’s family is safe.
+                    <p>Take the trash out so the vegetation grows healthy.
                     </p>
                 </div>
             </div>
