I added media folder with all images and png files, the connections are still not linked

--- a/coding/index.html
+++ b/coding/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
    <main>
-   <img src="placeholder.jpg" id="logo" alt="logo">
+   <img src="media/logo.jpg" id="logo" alt="logo">
    <p>What is your name/name of your group?</p>
     <input type="text">
     <button class="start">continue</button>
