--- a/coding/welcomepage.html
+++ b/coding/welcomepage.html
@@ -13,7 +13,7 @@
         <h1 id="hello">Hello, Lukas!</h1>
         <h3 id="welcometitle">Welcome to the <em>Greenhouses Game</em></h3>
         <div>
-            <p class="welcomecontent"><img src="placeholder.jpg" id="welcomemap" alt="map" align="right">Welcome to Aarhus' Greenhouses, we are thrilled to have you here!
+            <p class="welcomecontent"><img src="/media/welcome.jpg" id="welcomemap" alt="map" align="right">Welcome to Aarhus' Greenhouses, we are thrilled to have you here!
                 Right now you're about to start an adventure troughout 4 different spectacular areas!</p>
             <p class="welcomecontent">You will discover exotic plants and tiny creatures in their natural habitat.
                 <br>
