--- a/coding/firstquestion.html
+++ b/coding/firstquestion.html
@@ -19,23 +19,23 @@
                 </div>
             </nav>
 
-            <p id="help"><img src="placeholder.jpg" id="map" align="right"><em>Need help?</em><br>Check the map</p>
+            <p id="help"><img src="/media/mapicon.png" id="map" align="right"><em>Need help?</em><br>Check the map</p>
             <div id="question">
                 <div id="number">1</div>
                 <div>
                     <p>Find the plastic item so the rosemary herb can still be used. </p>
                 </div>
             </div>
-            <img src="round-placeholder.png" id="bird">
+            <img src="/media/circle1.png" id="bird">
 
             <div id="stickers">
-                <img src="round-placeholder.png">
-                <img src="round-placeholder.png">
-                <img src="round-placeholder.png">
-                <img src="round-placeholder.png">
+                <img src="/media/plasticbag.png">
+                <img src="/media/straw.png">
+                <img src="/media/cottno%20buds.png">
+                <img src="/media/plasticbottle.png">
             </div>
 
-            <img src="round-placeholder.png" id="circle">
+            <img src="/media/camerabutton.png" id="circle">
 
         </div>
     </main>
