--- a/coding/instructions.html
+++ b/coding/instructions.html
@@ -22,25 +22,25 @@
             <hr><br>
 
             <section class="headline">
-                <img src="round-placeholder.png">
+                <img src="/media/tick.png">
                 <h1>Find the stickers</h1>
             </section>
             <section class="descriptiontwo">
-                <img src="round-placeholder.png">
-                <img src="round-placeholder.png">
-                <img src="round-placeholder.png">
-                <img src="round-placeholder.png">
+                <img src="/media/plasticbag.png">
+                <img src="/media/straw.png">
+                <img src="/media/cottno%20buds.png">
+                <img src="/media/plasticbottle.png">
                 <p>They are all over the place. Check the map and don’t forget to look on the floor or the top of the trees !</p>
             </section>
             <section class="headline">
-                <img src="round-placeholder.png">
+                 <img src="/media/tick.png">
                 <h1>Pick the one that matches with the correct location.</h1>
             </section>
             <section class="descriptiontwo">
                 <p>It is important that they are in the correct order.</p>
             </section>
             <section class="headline">
-                <img src="round-placeholder.png">
+                 <img src="/media/tick.png">
                 <h1>Check the points you won.</h1>
             </section>
             <section class="descriptiontwo">
