--- a/coding/mission.html
+++ b/coding/mission.html
@@ -24,7 +24,7 @@
             <div class="mission3">
                 <h4 class="mission2">Clear the</h4>
                 <h1 class="title">Plastic traps</h1>
-                <div class="game"><img src="rectangle-placeholder.png"></div>
+                <div class="game"><img src="/media/game1instructions.jpg"></div>
                 <div class="description">This beautiful mediterranean forest is polluted with plastic materials. Some animals are in danger. Help us clean their home!</div>
 
                 <button class="start">Instructions</button>
