--- a/coding/games.html
+++ b/coding/games.html
@@ -30,10 +30,10 @@
                 <p id="second">Let's hop into the</p>
                 <h1 class="title">Mediterranean<br>forest</h1>
 
-                <div class="section"><img src="/media/game1selected.jpg"></div>
-                <div class="section"><img src="/media/game2locked.jpg"></div>
-                <div class="section"><img src="/media/game3locked.jpg"></div>
-                <div class="section"><img src="/media/game4locked.jpg"></div>
+                <div class="section"><img src="media/game1selected.jpg"></div>
+                <div class="section"><img src="media/game2locked.jpg"></div>
+                <div class="section"><img src="media/game3locked.jpg"></div>
+                <div class="section"><img src="media/game4locked.jpg"></div>
             </div>
         </div>
 
