--- a/coding/index.html
+++ b/coding/index.html
@@ -21,7 +21,9 @@
         <img src="media/logo.jpg" class="logo" alt="logo">
         <p>What is your name/name of your group?</p>
         <input type="text">
-        <button class="start">continue</button>
+        <form>
+            <input type="button" value="continue" onclick="window.location.href='welcomepage.html'"/>
+        </form>
     </main>
 
     <script type="text/javascript" src="jquery/jquery-3.3.1.min.js"></script>
