--- a/coding/thirdquestion.html
+++ b/coding/thirdquestion.html
@@ -26,7 +26,7 @@
                     <h3>mediterranean forest</h3>
                 </div>
             </nav>
-            <p id="help"><img src="/media/mapicon.png" id="map" align="right"><em>Need help?</em><br>Check the map</p>
+            <p id="help"><img src="media/mapicon.png" id="map" align="right"><em>Need help?</em><br>Check the map</p>
             <div id="question">
                 <div id="number">3</div>
                 <div>
@@ -34,16 +34,16 @@
                     </p>
                 </div>
             </div>
-            <img src="/media/circle3.png" id="bird">
+            <img src="media/circle3.png" id="bird">
 
             <div id="stickers">
-                <img src="/media/plasticbag.png">
-                <img src="/media/straw.png">
-                <img src="/media/cottno%20buds.png">
-                <img src="/media/plasticbottle.png">
+                <img src="media/plasticbag.png">
+                <img src="media/straw.png">
+                <img src="media/cottonbuds.png">
+                <img src="media/plasticbottle.png">
             </div>
 
-            <img src="/media/camerabutton.png" id="circle">
+            <img src="media/camerabutton.png" id="circle">
 
         </div>
     </main>
