background image, design changes

--- a/coding/games.html
+++ b/coding/games.html
@@ -20,7 +20,9 @@
     <main>
         <div id="content">
             <nav>
+                <a href="welcomepage.html">
                 <button class="back"><i class="fa fa-arrow-left"></i></button>
+                </a>
                 <div class="heading">
                     <h3>games</h3>
                 </div>
