--- a/coding/welcomepage.html
+++ b/coding/welcomepage.html
@@ -28,8 +28,10 @@
                 Right now you're about to start an adventure troughout 4 different spectacular areas!</p>
             <p class="welcomecontent">You will discover exotic plants and tiny creatures in their natural habitat.
                 <br>
-                Let's not forget: nowadays, these areas are facing global problems, such as pollution or climate change.<br>
-
+                <br>
+                Let's not forget: nowadays, these areas are facing global problems, such as pollution or climate change.
+                <br>
+                <br>
                 First, we need to find out their causes and learn how to prevent them in the future.
                 Explore as much as you can and don't forget to have fun!
             </p>
