--- a/coding/index.html
+++ b/coding/index.html
@@ -19,6 +19,13 @@
 
     <main>
         <img src="media/logo.jpg" class="logo" alt="logo">
+        <p>
+            <em id="quote">
+            The place where 4 areas meet.
+            <br>
+            Are you ready to explore them?
+            </em>
+        </p>
         <p>What is your name/name of your group?</p>
         <input type="text">
         <form>
