--- a/coding/index.html
+++ b/coding/index.html
@@ -6,24 +6,18 @@
     <title>Splash page</title>
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style type="text/css">
-        < !-- @font-face {
-            font-family: Yumaro;
-            src: url('Yumaro.otf');
-        }
-
-    </style>
+    
 </head>
 
-<body>
+<body class="mainpage">
 
     <main>
-        <img src="media/logo.jpg" class="logo" alt="logo">
+        <img src="media/logo.png" class="logo" alt="logo">
         <p>
             <em id="quote">
-            The place where 4 areas meet.
-            <br>
-            Are you ready to explore them?
+                The place where 4 areas meet.
+                <br>
+                Are you ready to explore them?
             </em>
         </p>
         <p>What is your name/name of your group?</p>
