--- a/coding/instructions.html
+++ b/coding/instructions.html
@@ -55,7 +55,7 @@
 
 
         </div>
-        <form>
+        <form style="padding-top: 10%">
             <input type="button" value="Start" onclick="window.location.href='firstquestion.html'"/>
         </form>
     </main>
