--- a/coding/mission.html
+++ b/coding/mission.html
@@ -7,13 +7,7 @@
     <meta name="viewport" "content=width=device-width, initial-scale=1.8">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <style type="text/css">
-        < !-- @font-face {
-            font-family: Yumaro;
-            src: url('Yumaro.otf');
-        }
-
-    </style>
+    <link href="Yumaro.otf" rel="stylesheet">
 </head>
 
 <body>
