--- a/coding/mission.html
+++ b/coding/mission.html
@@ -15,7 +15,9 @@
     <main>
         <div id="content">
             <nav>
+                <a href="games.html">
                 <button class="back"><i class="fa fa-arrow-left"></i></button>
+                </a>
                 <div class="heading">
                     <h3>mediterranean forest</h3>
                 </div>
