--- a/coding/apimap.html
+++ b/coding/apimap.html
@@ -36,7 +36,7 @@
         }
 
         .mapboxgl-popup {
-            max-width: 200px;
+            max-width: 250px;
         }
 
     </style>
@@ -58,7 +58,7 @@
         var popup = new mapboxgl.Popup({
                 offset: 25
             })
-            .setText('The Canarian Islands');
+            .setHTML('<img src="placeholder.jpg" alt="img" style="max-width: 200px"/>');
 
         // create DOM element for the marker
         var el = document.createElement('div');
