final code (or is It?)

--- a/coding/apimap.html
+++ b/coding/apimap.html
@@ -58,7 +58,7 @@
         var popup = new mapboxgl.Popup({
                 offset: 25
             })
-            .setHTML('<img src="placeholder.jpg" alt="img" style="max-width: 200px"/>');
+            .setHTML('<p>The Caribbean Islands</p><img src="media/caribbean.jpg" style="width:200px"/>');
 
         // create DOM element for the marker
         var el = document.createElement('div');
