--- a/coding/instructions.html
+++ b/coding/instructions.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Mission</title>
-    <meta name="viewport" "content=width=device-width, initial-scale=1.8">
+    <title>Instructions</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <style type="text/css">
@@ -26,38 +26,37 @@
                 <div class="heading">
                     <h3>mediterranean forest</h3>
                 </div>
+                <button class="home"><a href="games.html"><img src="media/homeicon.png" style="width: 100%" alt="homeicon"></a></button>
             </nav>
             <p class="mission">Instructions:</p>
-            <hr><br>
+            <hr style="width:34%"><br>
 
             <section class="headline">
-                <img src="media/tick.png">
-                <h1>Find the stickers</h1>
+                <img src="media/tick.png" alt="tick">
+                <p>Find the stickers</p>
             </section>
             <section class="descriptiontwo">
-                <img src="media/plasticbag.png">
-                <img src="media/straw.png">
-                <img src="media/cottonbuds.png">
-                <img src="media/plasticbottle.png">
+                <img src="media/plasticbag.png" alt="plastic bag icon">
+                <img src="media/straw.png" alt="straw icon">
+                <img src="media/cottonbuds.png" alt="cotton buds icon">
+                <img src="media/plasticbottle.png" alt="plastic bottle icon">
                 <p>They are all over the place. Check the map and don’t forget to look on the floor or the top of the trees !</p>
             </section>
             <section class="headline">
-                <img src="media/tick.png">
-                <h1>Pick the one that matches with the correct location.</h1>
+                <img src="media/tick.png" alt="tick">
+                <p>Pick the one that matches with the correct location.</p>
             </section>
-            <section class="descriptiontwo">
-                <p><img src="media/cottonbuds.png">It is important that they are in the correct order.</p>
+            <section class="descriptiontwo"  style="display: flex; flex-direction: row">
+                <img src="media/cottonbuds.png" style="height: 50px; margin-top: 8px" alt="cotton buds"><p>It is important that they are in the correct order.</p>
             </section>
             <section class="headline">
-                <img src="media/tick.png">
-                <h1>Check the points you won.</h1>
-            </section>
-            <section class="descriptiontwo">
+                <img src="media/tick.png" alt="tick">
+                <p>Check the points you won.</p>
             </section>
 
 
         </div>
-        <form style="padding-top: 10%">
+        <form style="padding-top: 5%">
             <input type="button" value="Start" onclick="window.location.href='firstquestion.html'"/>
         </form>
     </main>
