--- a/coding/welcomepage.html
+++ b/coding/welcomepage.html
@@ -4,27 +4,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Welcome page</title>
-    <meta name="viewport" "content=width=device-width, initial-scale=1.8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" type="text/css" href="style.css">
-    <style type="text/css">
+    <style>
         < !-- @font-face {
             font-family: Yumaro;
             src: url('Yumaro.otf');
         }
-
     </style>
     <script src="https://unpkg.com/scrollreveal@4"></script>
     <script>
-        ScrollReveal({ duration: 1000 })
+        ScrollReveal({ duration: 2500 })
 	</script>
 </head>
 
 <body class="mainpage">
     <main>
         <h1 id="hello">Hello, Lukas!</h1>
-        <h3 id="welcometitle">Welcome to the <em>Greenhouses Game</em></h3>
+        <h3 id="welcometitle">Welcome to the Greenhouses Game</h3>
         <div>
-            <p class="welcomecontent"><img src="media/welcome.jpg" id="welcomemap" alt="map" align="left">Welcome to Aarhus' Greenhouses, we are thrilled to have you here!
+            <p class="welcomecontent"><img src="media/welcome.jpg" id="welcomemap" alt="gardenpicture" align="left">Welcome to Aarhus' Greenhouses, we are thrilled to have you here!
                 Right now you're about to start an adventure troughout 4 different spectacular areas!</p>
             <p class="welcomecontent">You will discover exotic plants and tiny creatures in their natural habitat.
                 <br>
