definitely final code

--- a/coding/index.html
+++ b/coding/index.html
@@ -12,6 +12,8 @@
 <body class="mainpage">
 
     <main>
+      <p style="font-size: 10px; margin-bottom: 0px; margin-top: -20px">Powered by</p>
+       <img src="media/science-museerne.png" alt="science museum logo" style="width:80px">
         <img src="media/logo.png" class="logo" alt="logo">
         <p id="quote">
                 The place where 4 areas meet.
